# notion-sync

./: .gitignore  Cargo.toml  README.md
src/: main.rs  md_blocks.rs  notion.rs  state.rs  yaml_blocks.rs
