[package]
name = "notion_sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notion_sync"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
